# scrub

./: .replit  app.py  pyproject.toml  replit.md
static/: manifest.json  sw.js
templates/: index.html
